<?xml version="1.0"?>
<package format="2">
  <name>sub_msgs</name>
  <version>0.0.0</version>
  <description>The sub_msgs package</description>

  <maintainer email="felixmessmer@gmail.com">Felix Messmer</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

</package>
